--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
  "scripts": {
   "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
   "start:frontend": "cd eventbridge && npm run dev",
-  "start:backend": "cd backend && node index.js"
+  "start:backend": "cd backend && node --no-warnings index.js"
   }
 }
