--- a/eventbridge/package.json
+++ b/eventbridge/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "test": "jest",
     "build": "vite build",
     "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "preview": "vite preview"
   },
   "dependencies": {
